--- a/Atcoder.ipynb
+++ b/Atcoder.ipynb
@@ -24,17 +24,38 @@
    ],
    "source": [
     "# 整数の入力\n",
-    "a = int(input())\n",
-    "\n",
+    "a = int(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# スペース区切りの整数の入力\n",
     "b, c = map(int, input().split())\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#スペース区切り文字の入力（リストにする場合）\n",
+    "N = list(map(int, input().split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 文字列の入力\n",
-    "s = input()\n",
-    "\n",
-    "\n",
-    "# 出力\n",
-    "print(\"{} {}\".format(a+b+c, s))"
+    "s = input()"
    ]
   },
   {
@@ -58,10 +79,18 @@
     }
    ],
    "source": [
+    "# 連続する数字を分割\n",
     "a = str(input())\n",
     "a = list(a)\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
