--- a/Atcoder.ipynb
+++ b/Atcoder.ipynb
@@ -90,7 +90,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ２文字ずつ\n",
+    "# x_1 y_1\n",
+    "# x_2 y_2\n",
+    "\n",
+    "P = [list(map(int, input().split())) for _ in range(N)]"
+   ]
   }
  ],
  "metadata": {
