--- a/Atcoder.ipynb
+++ b/Atcoder.ipynb
@@ -97,6 +97,22 @@
     "\n",
     "P = [list(map(int, input().split())) for _ in range(N)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rがn/2に近いと非常に重くなる\n",
+    "def combination(n, r, mod=10**9+7):\n",
+    "    n1, r = n+1, min(r, n-r)\n",
+    "    numer = denom = 1\n",
+    "    for i in range(1, r+1):\n",
+    "        numer = numer * (n1-i) % mod\n",
+    "        denom = denom * i % mod\n",
+    "    return numer * pow(denom, mod-2, mod) % mod"
+   ]
   }
  ],
  "metadata": {
